# game-of-life

./: CMakeLists.txt  README.md  vcpkg.json
src/: ComputePipeline.cpp  ComputePipeline.h  Geometry.cpp  Geometry.h  Life.cpp  Life.h  RenderPipeline.cpp  RenderPipeline.h  WebGPUContext.cpp  WebGPUContext.h  index.html  life.cpp  life.h  main.cpp  shader.cpp  shader.h  triangle.cpp  triangle.h  webgpu-utils.cpp  webgpu-utils.h
src/shaders/: shader.wgsl
